<resources>
    <string name="app_name">Woofer</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="login">Login</string>
    <string name="fullname">FULLNAME</string>
    <string name="signup">SignUp</string>
    <string name="email">EMAIL</string>
    <string name="loginhere">Already have an account? <u>Login</u></string>
    <string name="signuphere">Don\'t have an account? <u>SignUp</u></string>
    <string name="SignUp_error">SignUp Error</string>
    <string name="Login_error">Login Error</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="logout">Logout</string>
</resources>